# gptsaregpts

./: .gitignore  README.md  pyproject.toml
gptsaregpts/: alter_db.py  create_db.py  migrate.py
notebooks/: analysis.ipynb  extract_data.ipynb  playground.ipynb
prompts/: system.txt  user.txt
