[tool.poetry]
name = "gptsaregpts"
version = "0.1.0"
description = ""
authors = ["Rushabh Doshi <radoshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
jupyter = "^1.0.0"
openai = "^0.28.0"
baserun = "^0.5.5"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.0"
pydantic = "^2.3.0"
black = {extras = ["jupyter"], version = "^24.3.0"}
tqdm = "^4.66.1"
tenacity = "^8.2.3"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
